NIFI-13242 Incorporating review comments